--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,12 +74,12 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentScalingGridSize=1
 CurrentPosGridSize=3
 GridEnabled=False
-CameraSpeed=2
+CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/_Scenes/ClownBall
-MRUItem1=/Game/_Scenes/Maze
-MRUItem2=/Game/_Scenes/VR_Menu
+MRUItem0=/Game/_Scenes/VR_Menu
+MRUItem1=/Game/_Scenes/ClownBall
+MRUItem2=/Game/_Scenes/Maze
 MRUItem3=/Game/_Scenes/IntroScene
 MRUItem4=/Game/_Scenes/Bowling
 MRUItem5=/Game/_Scenes/HeartBall
@@ -97,7 +97,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameInstance
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Materials/Menu/Sign_BloodFloor
 None=======
 None=======
 None=======
@@ -150,7 +150,7 @@ LastLevel=/Game/_Scenes/Maze
 LastLevel=/Game/_Scenes/HeartBall
 LastLevel=/Game/_Scenes/Bowling
 LastLevel=/Game/_Scenes/VR_Menu
-LastLevel=/Game/_Scenes/ClownBall
+LastLevel=/Game/_Scenes/VR_Menu
 None=======
 None=======
 None=======
@@ -506,7 +506,7 @@ Texture2D.File Path=True
 Texture2D.Adjustments=True
 Texture2D.Compositing=True
 PaperSpriteActor.TransformCommon=True
-PaperSpriteActor.Sprite=False
+PaperSpriteActor.Sprite=True
 PaperSpriteActor.Materials=True
 PaperSpriteActor.Physics=True
 PaperSpriteActor.Collision=True
@@ -2475,7 +2475,7 @@ PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationSh
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object="\"Object.LightmassSettings\" "
 Object=
-Object=
+Object="\"Object.Tags.ComponentTags\" "
 None=======
 None=======
 None=======
@@ -2486,16 +2486,16 @@ MaterialExpression=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" "
 Info="\"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" "
 CableComponent="\"Object.Cable.AttachEndTo\" \"Object.Cable.EndLocation\" \"Object.Tags.ComponentTags\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
+MeshComponent="\"Object.Tags.ComponentTags\" "
 PrimitiveComponent=
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
+PrimitiveComponent="\"Object.Tags.ComponentTags\" "
 SceneComponent=
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
+SceneComponent="\"Object.Tags.ComponentTags\" "
 ActorComponent=
 ActorComponent=
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object.Tags.ComponentTags\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2509,9 +2509,9 @@ StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.ImportSettin
 BP_Heart_C=
 StaticMeshActor=
 REINST_BP_Heart_C_514="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
-BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
-ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
+StaticMeshComponent="\"Object.Tags.ComponentTags\" "
+BoxComponent="\"Object.Tags.ComponentTags\" "
+ShapeComponent="\"Object.Tags.ComponentTags\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2538,7 +2538,7 @@ BP__BottlesRandomSpawner_C="\"Object.Default.ActorList\" "
 BP_BallSpawner_C=
 BP_EyeBallSpawner_C=
 BP_KnifeSpawner_C=
-BP_Menu_RandomSpawnerVolume_C="\"Object.Default.ActorList\" "
+BP_Menu_RandomSpawnerVolume_C=
 BP_Ride_RandomSpawnerJumpScare_C=
 BP_Ride_RandomSpawnerBottles_C="\"Object.Default.ActorList\" "
 AudioComponent="\"Object.Tags.ComponentTags\" "
@@ -2555,6 +2555,13 @@ LightComponent="\"Object.Tags.ComponentTags\" "
 LightComponentBase="\"Object.Tags.ComponentTags\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/Menu/Sign_BloodFloor/Flat_Menu_SignBloodTiles_Mat.Flat_Menu_SignBloodTiles_Mat;
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
+RecentlyPlaced=/Game/Materials/Maze/BloodFloor/BloodFloor_Mat.BloodFloor_Mat;
+RecentlyPlaced=/Game/Materials/Maze/BarrelV1/Flat_BarrelV1Mat.Flat_BarrelV1Mat;
+RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Blueprints/ClownBall/BP_TargetPointClownBelly.BP_TargetPointClownBelly;
 RecentlyPlaced=/Game/Blueprints/ClownBall/BP_RespawnBallFromClown.BP_RespawnBallFromClown;
 RecentlyPlaced=/Game/Blueprints/ClownBall/BP_DestroyEyeBalInClown.BP_DestroyEyeBalInClown;
@@ -2565,16 +2572,9 @@ RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/TileFloor1_NormalMap.TileFloor1_
 RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/TileFloor1_DisplacementMap.TileFloor1_DisplacementMap;
 RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/TileFloor1_AmbientOcclusionMap.TileFloor1_AmbientOcclusionMap;
 RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/TileFloor1.TileFloor1;
-RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/brown_eye.brown_eye;
 RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/teeth.teeth;
 RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/ponytail01_Mat.ponytail01_Mat;
-RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/ponytail01_diffuse.ponytail01_diffuse;
-RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/old_lightskinned_male_diffuse.old_lightskinned_male_diffuse;
-RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/ClownTorsoV2StaticMesh.ClownTorsoV2StaticMesh;
-RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/Pieces/ClownBallTorsoV2_teeth_baseMesh.ClownBallTorsoV2_teeth_baseMesh;
-RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/Pieces/ClownBallTorsoV2_ponytail01Mesh_002.ClownBallTorsoV2_ponytail01Mesh_002;
-RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/Pieces/ClownBallTorsoV2_ponytail01Mesh_001.ClownBallTorsoV2_ponytail01Mesh_001;
 None=======
 None=======
 None=======
@@ -2583,12 +2583,12 @@ None=======
 BP__BottlesRandomSpawner_C=
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LightingResults
 
 [RootWindow]
 ScreenPosition=X=12.000 Y=14.000
 WindowSize=X=1577.000 Y=821.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -3664,6 +3664,8 @@ None=======
 /Game/Blueprints/ClownBall/BP_RespawnBallFromClown.BP_RespawnBallFromClown=0
 /Game/Blueprints/ClownBall/BP_TargetPointClownBelly.BP_TargetPointClownBelly=0
 /Game/Blueprints/ClownBall/BP_DestroyBall_Base.BP_DestroyBall_Base=0
+/Game/_Scenes/VR_Menu.VR_Menu:PersistentLevel.AmbientSoundSpotLightOn.AmbientSound_SoundCue=0
+/Game/Materials/Menu/Sign_BloodFloor/Flat_Menu_SignBloodTiles_Mat.Flat_Menu_SignBloodTiles_Mat=0
 
 [MaterialEditor]
 PrimType=1
