--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -19,7 +19,7 @@ MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowPosition=(X=160,Y=90)
-LastExecutedPlayModeType=PlayMode_Simulate
+LastExecutedPlayModeType=PlayMode_InVR
 GameGetsMouseControl=False
 MouseControlLabelPosition=LabelAnchorMode_TopLeft
 ViewportGetsHMDControl=False
@@ -74,17 +74,17 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentScalingGridSize=1
 CurrentPosGridSize=3
 GridEnabled=False
-CurrentRotGridSize=0
+CurrentRotGridSize=4
 CameraSpeed=2
 
 [MRU]
-MRUItem0=/Game/_Scenes/VR_Menu
-MRUItem1=/Game/_Scenes/Bowling
-MRUItem2=/Game/_Scenes/KnifeThrow
-MRUItem3=/Game/_Scenes/IntroScene
-MRUItem4=/Game/_Scenes/HeartBall
-MRUItem5=/Game/_Scenes/ClownBall
-MRUItem6=/Game/_Scenes/Maze
+MRUItem0=/Game/_Scenes/Maze
+MRUItem1=/Game/_Scenes/KnifeThrow
+MRUItem2=/Game/_Scenes/IntroScene
+MRUItem3=/Game/_Scenes/HeartBall
+MRUItem4=/Game/_Scenes/ClownBall
+MRUItem5=/Game/_Scenes/Bowling
+MRUItem6=/Game/_Scenes/VR_Menu
 MRUItem7=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [LightingBuildOptions]
@@ -98,7 +98,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/GameInstance
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints/HeartBall
-ContentBrowserTab1.SelectedPaths=/Game/_Scenes
+ContentBrowserTab1.SelectedPaths=/Game
 None=======
 None=======
 None=======
@@ -151,7 +151,7 @@ LastLevel=/Game/_Scenes/Maze
 LastLevel=/Game/_Scenes/HeartBall
 LastLevel=/Game/_Scenes/Bowling
 LastLevel=/Game/_Scenes/VR_Menu
-LastLevel=/Game/_Scenes/VR_Menu
+LastLevel=/Game/_Scenes/Maze
 None=======
 None=======
 None=======
@@ -2477,7 +2477,7 @@ PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationSh
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object="\"Object.LightmassSettings\" "
 Object=
-Object=
+Object="\"Object.Tags.ComponentTags\" "
 None=======
 None=======
 None=======
@@ -2558,6 +2558,7 @@ LightComponentBase="\"Object.Tags.ComponentTags\" "
 TextRenderComponent="\"Object.Tags.ComponentTags\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/_GeneralUse/Buttons/BP_Button_Menu.BP_Button_Menu;
 RecentlyPlaced=/Game/Blueprints/_GeneralUse/Buttons/Maze.Maze;
 RecentlyPlaced=/Game/Materials/Menu/Sign_BloodFloor/Flat_Menu_SignBloodTiles_Mat.Flat_Menu_SignBloodTiles_Mat;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
@@ -2577,7 +2578,6 @@ RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/TileFloor1_DisplacementMap.TileF
 RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/TileFloor1_AmbientOcclusionMap.TileFloor1_AmbientOcclusionMap;
 RecentlyPlaced=/Game/Materials/Maze/TilesFloor1/TileFloor1.TileFloor1;
 RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/brown_eye.brown_eye;
-RecentlyPlaced=/Game/FBX_Models/ClownBall/ClownTorso/teeth.teeth;
 None=======
 None=======
 None=======
@@ -2586,7 +2586,7 @@ None=======
 BP__BottlesRandomSpawner_C=
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
 
 [RootWindow]
 ScreenPosition=X=12.000 Y=14.000
